added digital input output.

--- a/module/nco/fibration-nco/fibration-nco.ioc
+++ b/module/nco/fibration-nco/fibration-nco.ioc
@@ -20,15 +20,16 @@ Mcu.IP5=USART1
 Mcu.IPNb=6
 Mcu.Name=STM32F303C(B-C)Tx
 Mcu.Package=LQFP48
-Mcu.Pin0=PF0-OSC_IN
-Mcu.Pin1=PF1-OSC_OUT
-Mcu.Pin2=PA0
-Mcu.Pin3=PA4
-Mcu.Pin4=PA9
-Mcu.Pin5=PA10
-Mcu.Pin6=PA12
-Mcu.Pin7=VP_SYS_VS_Systick
-Mcu.PinsNb=8
+Mcu.Pin0=PC13
+Mcu.Pin1=PF0-OSC_IN
+Mcu.Pin2=PF1-OSC_OUT
+Mcu.Pin3=PA0
+Mcu.Pin4=PA4
+Mcu.Pin5=PA9
+Mcu.Pin6=PA10
+Mcu.Pin7=PA12
+Mcu.Pin8=VP_SYS_VS_Systick
+Mcu.PinsNb=9
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F303CCTx
@@ -54,6 +55,8 @@ PA12.Signal=GPIO_Input
 PA4.Signal=COMP_DAC1_group
 PA9.Mode=Asynchronous
 PA9.Signal=USART1_TX
+PC13.Locked=true
+PC13.Signal=GPIO_Output
 PF0-OSC_IN.Mode=HSE-External-Oscillator
 PF0-OSC_IN.Signal=RCC_OSC_IN
 PF1-OSC_OUT.Mode=HSE-External-Oscillator
