--- a/module/nco/fibration-nco/fibration-nco.ioc
+++ b/module/nco/fibration-nco/fibration-nco.ioc
@@ -22,14 +22,18 @@ Mcu.Name=STM32F303C(B-C)Tx
 Mcu.Package=LQFP48
 Mcu.Pin0=PC13
 Mcu.Pin1=PF0-OSC_IN
+Mcu.Pin10=PA12
+Mcu.Pin11=PB9
+Mcu.Pin12=VP_SYS_VS_Systick
 Mcu.Pin2=PF1-OSC_OUT
 Mcu.Pin3=PA0
 Mcu.Pin4=PA4
-Mcu.Pin5=PA9
-Mcu.Pin6=PA10
-Mcu.Pin7=PA12
-Mcu.Pin8=VP_SYS_VS_Systick
-Mcu.PinsNb=9
+Mcu.Pin5=PB11
+Mcu.Pin6=PB12
+Mcu.Pin7=PB13
+Mcu.Pin8=PA9
+Mcu.Pin9=PA10
+Mcu.PinsNb=13
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F303CCTx
@@ -50,11 +54,31 @@ PA0.Mode=IN1-Single-Ended
 PA0.Signal=ADC1_IN1
 PA10.Mode=Asynchronous
 PA10.Signal=USART1_RX
+PA12.GPIOParameters=GPIO_Label
+PA12.GPIO_Label=BUTTON_A
 PA12.Locked=true
 PA12.Signal=GPIO_Input
 PA4.Signal=COMP_DAC1_group
 PA9.Mode=Asynchronous
 PA9.Signal=USART1_TX
+PB11.GPIOParameters=GPIO_Label
+PB11.GPIO_Label=ROT_ENC_BTN
+PB11.Locked=true
+PB11.Signal=GPIO_Input
+PB12.GPIOParameters=GPIO_Label
+PB12.GPIO_Label=ROT_ENC_B
+PB12.Locked=true
+PB12.Signal=GPIO_Input
+PB13.GPIOParameters=GPIO_Label
+PB13.GPIO_Label=ROT_ENC_A
+PB13.Locked=true
+PB13.Signal=GPIO_Input
+PB9.GPIOParameters=GPIO_Label
+PB9.GPIO_Label=LED_RGB_1
+PB9.Locked=true
+PB9.Signal=GPIO_Output
+PC13.GPIOParameters=GPIO_Label
+PC13.GPIO_Label=LED_ONBOARD
 PC13.Locked=true
 PC13.Signal=GPIO_Output
 PF0-OSC_IN.Mode=HSE-External-Oscillator
